--- a/.github/workflows/first-workflow.yml
+++ b/.github/workflows/first-workflow.yml
@@ -1,11 +1,28 @@
-name: PrintText
+name: cowsay
 
-on: push
+on:
+  push:
+
+  workflow_dispatch:
 
 jobs:
-  print-text:
+  build_job1:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Print text
-        run: echo "Hello, this is a text message printed by GitHub Actions on push!"
+      - name: checkout repo
+        uses: actions/checkout@v4
+
+      - name: install cowsay program
+        run: sudo apt-get install cowsay -y
+
+      - name: Execute cowsay CMD
+        run: cowsay -f dragon "Run for cover, iam a Dragon....RAWR" dragon.txt
+
+      - name: upload artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: dragon-file
+          path: dragon.txt
+
+      - name: read readme file
+        run: ls -1
